<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/title1_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/main_activity_title1_text_size"
        android:textStyle="bold"
        android:text="@string/main_menu_title1"/>
    <TextView
        android:id="@+id/title2_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1_textview"
        android:layout_marginBottom="@dimen/main_activity_title_bottom_margin"
        android:gravity="center_horizontal"
        android:textSize="@dimen/main_activity_title2_text_size"
        android:textStyle="bold"
        android:text="@string/main_menu_title2"/>

    <Button
        android:id="@+id/script_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title2_textview"
        android:layout_marginLeft="@dimen/main_activity_menu_button_left_right_margin"
        android:layout_marginRight="@dimen/main_activity_menu_button_left_right_margin"
        android:layout_marginBottom="@dimen/main_activity_menu_button_side_margin"
        style="@style/MainMenuButtonBackground"
        android:textSize="@dimen/main_activity_menu_button_text_size"
        android:text="@string/main_menu_script" />

    <Button
        android:id="@+id/practice_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/script_btn"
        android:layout_marginLeft="@dimen/main_activity_menu_button_left_right_margin"
        android:layout_marginRight="@dimen/main_activity_menu_button_left_right_margin"
        android:layout_marginBottom="@dimen/main_activity_menu_button_side_margin"
        style="@style/MainMenuButtonBackground"
        android:textSize="@dimen/main_activity_menu_button_text_size"
        android:text="@string/main_menu_practice" />

    <Button
        android:id="@+id/exam_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/practice_btn"
        android:layout_marginLeft="@dimen/main_activity_menu_button_left_right_margin"
        android:layout_marginRight="@dimen/main_activity_menu_button_left_right_margin"
        android:layout_marginBottom="@dimen/main_activity_menu_button_side_margin"
        style="@style/MainMenuButtonBackground"
        android:textSize="@dimen/main_activity_menu_button_text_size"
        android:text="@string/main_menu_exam" />

    <Button
        android:id="@+id/description_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exam_btn"
        android:layout_marginLeft="@dimen/main_activity_menu_button_left_right_margin"
        android:layout_marginRight="@dimen/main_activity_menu_button_left_right_margin"
        style="@style/MainMenuButtonBackground"
        android:textSize="@dimen/main_activity_menu_button_text_size"
        android:text="@string/main_menu_manual" />
</RelativeLayout>
