<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/script_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/script_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_alignParentTop="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/pre_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/script_activity_button_text_size"
                android:text="@string/previous_script"/>
            <TextView
                android:id="@+id/count_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/script_activity_count_text_size"
                android:layout_centerInParent="true"/>
            <Button
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/script_activity_button_text_size"
                android:text="@string/next_script"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_script_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/script_activity_script_empty_message_bottom_margin"
            android:text="@string/script_empty_message"/>
        <Button
            android:id="@+id/go_description_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_description_activity_message"/>
    </LinearLayout>
</RelativeLayout>
